[UPDATE] Added Package json back in

--- a/Editor/FD.Tools.asmdef
+++ b/Editor/FD.Tools.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "FD.Tools"
+    "name": "FD.Tools",
+    "rootNamespace": "",
+    "references": [
+        "GUID:478a2357cc57436488a56e564b08d223"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
