--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "com.jforder.core",
+  "name" : "com.jforder.tools",
   "displayName" : "Four Door Tools",
   "version" : "1.0.0",
   "unity" : "2020.3",
