--- a/Editor/FD.Tools.asmdef
+++ b/Editor/FD.Tools.asmdef
@@ -2,10 +2,10 @@
     "name": "FD.Tools",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [],
-    "excludePlatforms": [
+    "includePlatforms": [
         "Editor"
     ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
